# hybridcloud

./: .project  .pydevproject  README.md  requirements.txt  setup.cfg
devstack/: plugin.sh  settings
etc/hybridcloud/: base-1.vmx  base-aws.vmx  base-template.vmx  hyper-agent.conf  hyper-agent.conf.hypernode.tmpl  hyper-agent.conf.hypervm.tmpl  hyper-agent.conf.tmpl  rootwrap.conf
etc/hybridcloud/rootwrap.d/: network.filters
etc/hyperagent/: hyper-agent.conf  hyper-agent.conf.hypernode.tmpl  hyper-agent.conf.hypervm.tmpl  rootwrap.conf
etc/init/: hyper-agent-cleanup.conf  hyper-agent-cleanup.conf.hypernode  hyper-agent-cleanup.conf.hypervm  hyper-agent.conf  hypernode-config.conf  hypervm-config.conf
etc/neutron/: l3_agent.conf.tmpl  neutron.conf.tmpl
etc/neutron/ml2/: ml2_conf.ini.tmpl
etc/neutron/plugins/ml2/: ml2_conf.ini.tmpl  openvswitch_agent.ini.tmpl
hyperagent/: version.py
hyperagent.egg-info/: PKG-INFO
hyperagent/agent/: container_image_glance.py  container_image_http.py  container_image_local.py  hyper_agent.py  hyper_agent_utils.py  hyperhost_vif.py  hypernode_vif.py  hypervm_vif.py  lxd_driver.py  vif_agent.py  vif_hypernode.py  vif_lxc_host.py  vif_lxd_host.py  vm_namespace.py
hyperagent/cleanup_util/: cleanup.py
hyperagent/cmd/eventlet/: agent.py
hyperagent/common/: config.py  container_image.py  exceptions.py  hyper_agent_utils.py  hyper_vif_driver.py  img_downloader.py  lxd_driver.py
nova/virt/hybrid/: __init__.py
nova/virt/hybrid/vcloud/: driver.py  exceptions.py  hyper_agent_api.py  (+2 more)
nova_driver/virt/hybrid/: __init__.py
(+16 files in other folders)
