[metadata]
name = hybridcloud
summary = hybrid nova driver / hyperswitch
description-file =
    README.md
author = Huawei
author-email = lionel.zerbib@huawei.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nova_driver
    hyperagent

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hyper-agent = hyperagent.cmd.eventlet.agent:main
    hyper-agent-rootwrap = oslo_rootwrap.cmd:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
